--- a/Courseworks.html
+++ b/Courseworks.html
@@ -1,17 +1,92 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>   
+Body {  
+  font-family: Calibri, Helvetica, sans-serif;  
+  background-color: white;  
+}  
+button {   
+       background-color: #5088C6;   
+       width: 100%;  
+        color: white;   
+        padding: 20px;   
+        margin: 10px 0px;   
+        border: none;   
+        cursor: pointer;   
+         }   
+ form {   
+        border: none;   
+    }   
+ input[type=text], input[type=password] {   
+        width: 100%;   
+        margin: 6px 0;  
+        padding: 12px 18px;   
+        display: inline-block;   
+        border: none;   
+        box-sizing: border-box;   
+    }  
+ button:hover {   
+        opacity: 0.8;   
+    }   
+  
+     
+ .container {   
+        padding: 48px;   
+        background-color: lightblue;  
+    }   
+	
+	
+	
+	
+	.btn-group button {
+  background-color:  light blue; /* blue background */
+  border: 1px solid blue; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
+
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: blue;
+}
+
+
+
+
+	
+</style>   
+</head>
 <body>
 
-<h2>Courseworks list</h2>
+ <center> <h1> Courseworks </h1> </center>   
 
 <dl>
-  <dt>Coursework 1</dt><p>
-  <dd>- Web Development </dd><p>
-  <dt>Coursework 2</dt><p>
-  <dd>- Database development</dd><p>
-   <dt>Coursework 3</dt><p>
-  <dd>- Human Computer Interaction</dd><p>
-  
+ <form>  
+  <div class="container"> 
+  <h2> <dt>Coursework 1</dt>  </h2> <p>
+  <dd>- Web Development (due to 25.05.2020) <div class="btn-group" style="width:100%"> <button style="width:25%">Add</button> 
+  <button style="width:25%">Remove</button> <button style="width:25%">Modify</button> <button style="width:25%">Milestone</button> </div>  </dd>  <p>
+ <h2> <dt>Coursework 2</dt> </h2> <p>
+  <dd>- Database development (due to 23.05.2020) <div class="btn-group" style="width:100%"> <button style="width:25%">Add</button>
+  <button style="width:25%">Remove</button> <button style="width:25%">Modify</button> <button style="width:25%">Milestone</button> </div> </dd><p>
+ <h2>  <dt>Coursework 3</dt> </h2> <p>
+  <dd>- Human Computer Interaction (due to 15.05.2020) <div class="btn-group" style="width:100%"> <button style="width:25%">Add</button>
+  <button style="width:25%">Remove</button> <button style="width:25%">Modify</button> <button style="width:25%">Milestone</button> </div> </dd><p>
+  </div>
+  </form>
   
 </dl>
 
